automatisch/deployment-auto-host.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: automatisch        # < name of the deployment
  namespace: automatisch   # < namespace where place the deployment and pods
  labels:
    app: automatisch-host       # < label for tagging and reference
spec:
  replicas: 1           # < number of pods to deploy
  selector:
    matchLabels:
      app: automatisch
  strategy:
    rollingUpdate:
      maxSurge: 0       # < The number of pods that can be created above the desired amount of pods during an update
      maxUnavailable: 1 # < The number of pods that can be unavailable during the update process
    type: RollingUpdate # < New pods are added gradually, and old pods are terminated gradually
  template:
    metadata:
      labels:
        app: automatisch
    spec:
      volumes:
      - name: automatisch-ssl
        secret:
          secretName: olympus-mangelschots-org-tls # < the name ssl certificate, will be created in the ingress yaml
      containers:
      - image: automatischio/automatisch:latest # < the name of the docker image we will use
        name: automatisch                      # < name of container
        imagePullPolicy: Always             # < always use the latest image when creating container/pod
        env:                                # < the environment variables required (see container documentation)
        - name: PGID
          value: "3000" # < group "user"
        - name: PUID
          value: "3000" # < user "docker"
        - name: TZ
          value: Europe/Brussels
        - name: ENCRYPTION_KEY
          valueFrom:
            secretKeyRef:
              name: automatisch
              key: encryption_key 
        - name: WEBHOOK_SECRET_KEY
          valueFrom:
            secretKeyRef:
              name: automatisch
              key: webhook_secret_key
        - name: APP_SECRET_KEY
          valueFrom:
            secretKeyRef:
              name: automatisch
              key: app_secret_key
