automatisch/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: automatisch-service    # < name of the service
  namespace: automatisch       # < namespace where place the deployment and pods
spec:
  selector:
    app: automatisch           # < reference to the deployment (connects with this deployment)
  ports:
    - name: http-80
      protocol: TCP
      port: 80
