automatisch/ingress.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: automatisch-ingress
  namespace: automatisch
  annotations: 
    kubernetes.io/ingress.class: traefik-internal
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`automatisch.olympus.mangelschots.org`)
      kind: Rule
      services:
        - name: automatisch-service
          port: 80
  tls:
    secretName: olympus-mangelschots-org-tls
